--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Conexiones.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ojdbc7.jar=D:\\Librerias\\ojdbc7.jar
+file.reference.ojdbc6.jar=D:\\Librerias\\ojdbc6.jar
 file.reference.sqljdbc4-2.0.jar=D:\\Librerias\\sqljdbc4-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}:\
     ${file.reference.sqljdbc4-2.0.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
