--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Conexiones
+application.vendor=jsilvab
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Conexiones.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=D:\\Librerias\\ojdbc6.jar
+file.reference.ojdbc7.jar=D:\\Librerias\\ojdbc7.jar
 file.reference.sqljdbc4-2.0.jar=D:\\Librerias\\sqljdbc4-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4-2.0.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +62,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
